@@ -27,6 +27,7 @@ unq:name
 'Gamma1 (unverified)'
 'Gamma1 (unverified)-Inferred'
 'Gamma1-Inferred'
+'Journal'
 'Local'
 'netLog'
 'Not Present'
